cluster-server-01/apps/prowlarr/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: media-prowlarr-ingress
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-production
spec:
  ingressClassName: traefik
  rules:
  - host: prowlarr.server.schwarz47.at
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: prowlarr-service
            port:
              name: web
  tls:
  - hosts:
    - prowlarr.server.schwarz47.at
    secretName: server-schwarz47-at-tls
